--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
   <!--Pas encore de films à afficher...-->
 <!--</section>-->
 
-<app-bandeau-playlist-film></app-bandeau-playlist-film>
+<app-bandeau-playlist-film [playlist]="playlist"></app-bandeau-playlist-film>
 
 <!--<app-film [filmResult]="movie" type="petit" ></app-film>
 
