--- a/src/app/bandeau-playlist-film/bandeau-playlist-film.component.css
+++ b/src/app/bandeau-playlist-film/bandeau-playlist-film.component.css
@@ -3,71 +3,31 @@
   font-size: xx-large;
   color: #757070;
   font-family: 'Roboto', sans-serif;
-  border:1px dotted black;
+}
+
+.playlistFilm {
+  display: flex;
+  flex-flow: row wrap; /* Align on the same line */
+  justify-content: space-around; /* Equal margin between the child elements */
 }
 
 .left {
   background: #f2f2f2;
-  float: left;
   padding: 20px 20px 20px 20px ;
-  border:1px dotted black;
+  flex-grow: 0;
 }
 
 .right {
-  border:1px dotted black;
+  flex-grow: 1;
 }
 
-.bandeauMoviesUp {
-  background: #ffc9ac;
-  border:1px dotted black;
+.bandeau {
   display: flex;
-  flex-flow: row nowrap; /* Align on the same line */
+  flex-flow: row wrap; /* Align on the same line */
   justify-content: space-evenly; /* Equal margin between the child elements */
-}
 
-.bandeauMoviesBottom {
-  background: black;
-  border:1px dotted black;
-  display: flex;
-  flex-flow: row nowrap; /* Align on the same line */
-  justify-content: space-evenly; /* Equal margin between the child elements */
-}
-
-.movieUp1 {
-  margin: 25px 50px 25px 50px;
-  background: brown;
-  float: left;
-}
-
-.movieUp2 {
-  margin: 25px 50px 25px 50px;
-  background: brown;
-}
-
-.movieUp3 {
-  margin: 25px 50px 25px 50px;
-  background: brown;
-  float: right;
-}
-
-.movieBottom1 {
-  margin: 25px 50px 50px 50px;
-  background: blue;
-  float: left;
-}
-
-.movieBottom2 {
-  background: blue;
-  margin:auto;
-}
-
-.movieBottom3 {
-  margin: 25px 50px 50px 50px;
-  background: blue;
-  float: right;
 }
 
 .movie {
-  margin: 25px 50px 25px 50px;
-  background: brown;
+  margin: 100px 50px 0px 50px;
 }
