depart base seine

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
   <!--Pas encore de films à afficher...-->
 <!--</section>-->
 
-<!--<app-film [filmResult]="movie" type="petit" ></app-film>-->
+<app-film [filmResult]="movie" type="petit" ></app-film>
 
 <!--<app-film [filmResult]="movie" type="medium" ></app-film>-->
 
@@ -42,4 +42,4 @@
 
 <!--<app-bandeau-result-search></app-bandeau-result-search>-->
 
-<app-advanced-search></app-advanced-search>
+<!--<app-advanced-search></app-advanced-search>-->
