--- a/src/app/film/film.component.css
+++ b/src/app/film/film.component.css
@@ -114,7 +114,7 @@
 /*!*part little definition*!*/
 
 .petit {
-  width: 8rem;
+  width: 10em;
   margin: 10px 10px 10px 10px;
   -webkit-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
@@ -124,7 +124,7 @@
 }
 
 .img-petit{
-  width : 8rem;
+  width : 10em;
   /*height: 8rem;*/
   /*background-size: cover;*/
 }
@@ -135,7 +135,7 @@
 
 .title-petit {
   font-weight: bold;
-  /*font-size: 2em;*/
+  font-size: 1.5em;
   margin-bottom: 0px;
   margin-top: 0px;
 }
