--- a/src/app/film/film.component.html
+++ b/src/app/film/film.component.html
@@ -12,7 +12,7 @@
   <!--</div>-->
 <!--</section>-->
 
-<section *ngIf="movie" >
+<section *ngIf="movie && (petit || medium)" ngClass="petit-medium-general">
 
   <!--partie pour les film petit et les moyen-->
   <!--ne pas oublier de rajouter le bouton voir plus-->
@@ -29,6 +29,10 @@
       <input *ngIf="medium" type="button" value="Voir plus ..." class="medium-button">
     </div>
   </section>
+
+</section>
+
+<section *ngIf="movie && big" style="width: 12em">
 
   <section *ngIf="big" [ngClass]="{'big': big}">
 
@@ -65,6 +69,9 @@
 
   </section>
 
+</section>
+
+<section *ngIf="movie && playlist" style="width: 12em">
 
   <section *ngIf="playlist" [ngClass]="{'playlist': playlist}">
 
