mise en place des 2 points en hover

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 
 <app-film [filmResult]="movie" type="petit" ></app-film>
 
-<!--<app-film [filmResult]="movie" type="medium" ></app-film>-->
+<app-film [filmResult]="movie" type="medium" ></app-film>
 
 <!--<app-film [filmResult]="movie" type="big" ></app-film>-->
 
