--- a/src/app/film/film.component.css
+++ b/src/app/film/film.component.css
@@ -1,40 +1,3 @@
-/*!*part little definition*!*/
-
-/*.movie-petit {*/
-  /*width: 8rem;*/
-  /*margin: 10px 10px 10px 10px;*/
-  /*-webkit-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);*/
-  /*-moz-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);*/
-  /*box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);*/
-  /*border-radius: 0 0 0 0;*/
-  /*border: none;*/
-/*}*/
-
-/*.movie-img-petit{*/
-  /*width : 8rem;*/
-  /*!*height: 8rem;*!*/
-  /*!*background-size: cover;*!*/
-/*}*/
-/*.movie-body-petit {*/
-  /*padding: 2px;*/
-  /*font-size: 0.8rem;*/
-/*}*/
-
-/*.movie-title-petit {*/
-  /*font-weight: bold;*/
-  /*!*font-size: 2em;*!*/
-  /*margin-bottom: 0px;*/
-  /*margin-top: 0px;*/
-/*}*/
-/*.movie-text-petit {*/
-  /*margin-top: 0px;*/
-  /*color: grey;*/
-  /*margin-bottom: 0;*/
-  /*white-space: nowrap;*/
-  /*text-overflow: ellipsis;*/
-  /*overflow: hidden;*/
-
-/*}*/
 
 
 /*Partie general pour faire le petit les 2 point*/
@@ -45,9 +8,7 @@
 }
 
 .petit-general:hover .img-three-points {
-  /*background-color: black;*/
   visibility: visible;
-
 }
 
 .img-three-points {
@@ -63,9 +24,7 @@
 }
 
 .medium-general:hover .img-three-points {
-  /*background-color: black;*/
   visibility: visible;
-
 }
 
 
@@ -80,8 +39,6 @@
 
 .medium {
   width: 40rem;
-  /*display: block;*/
-  /*margin: 10px 10px 10px 10px;*/
   -webkit-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
   box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
@@ -92,20 +49,17 @@
 
 .img-medium{
   width : 8rem;
-  /*height: 8rem;*/
-  /*background-size: cover;*/
 }
 .body-medium {
   padding: 2px;
-  font-size: 1rem;
-  width: 30.3rem;
+  font-size: 1em;
+  width: 30.3em;
   margin-left: 0.7rem;
 
 }
 
 .title-medium {
   font-weight: bold;
-  /*font-size: ;*/
   margin-bottom: 0px;
   margin-top: 0px;
 }
@@ -113,10 +67,6 @@
   margin-top: 0px;
   color: grey;
   margin-bottom: 0;
-  /*white-space: nowrap;*/
-  /*text-overflow: ellipsis;*/
-  /*overflow: hidden;*/
-
 }
 
 .medium-button{
@@ -149,7 +99,6 @@
 
 .petit {
   width: 10em;
-  /*margin: 10px 10px 10px 10px;*/
   -webkit-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
   box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
@@ -159,8 +108,6 @@
 
 .img-petit{
   width : 10em;
-  /*height: 8rem;*/
-  /*background-size: cover;*/
 }
 .body-petit {
   padding: 2px;
@@ -194,9 +141,6 @@
 }
 
 .big {
-  /*width: 40rem;*/
-  /*display: block;*/
-
   display: -webkit-inline-box;
 }
 
@@ -211,22 +155,17 @@
 
 .img-big{
   width : 20rem;
-  /*height: 8rem;*/
-  /*background-size: cover;*/
 }
 .body-big {
   padding-left: 2rem;
   font-size: 3rem;
   width: 80%;
   padding-right: 2rem;
-  /*margin-left: 0.7rem;*/
-
 }
 
 .title-big {
   font-weight: bold;
   padding-top: 0.5rem;
-  /*font-size: ;*/
   margin-bottom: 0px;
   margin-top: 0px;
 }
@@ -236,10 +175,6 @@
   color: grey;
   margin-bottom: 0;
   font-size: 2rem;
-  /*white-space: nowrap;*/
-  /*text-overflow: ellipsis;*/
-  /*overflow: hidden;*/
-
 }
 
 .img-big ~ * {
@@ -264,16 +199,12 @@
 
 /*parti playlist photo*/
 .time-playlist {
-  /*font-size: 1.5em;*/
   margin-bottom: 0px;
   margin-top: 0px;
 }
 
 .playlist {
   width: 30rem;
-  /*display: block;*/
-
-  /*display: -webkit-inline-box;*/
 }
 
 .img-detail-playlist{
@@ -287,7 +218,6 @@
 }
 
 .detail-playlist{
-  /*display: inherit;*/
   display: block;
   padding-left: 2rem;
   padding-right: 2rem;
@@ -295,22 +225,16 @@
 
 .img-playlist{
   width : 10rem;
-  /*height: 8rem;*/
-  /*background-size: cover;*/
 }
 .body-playlist {
   padding-left: 2rem;
   font-size: 1rem;
-  /*width: 80%;*/
   padding-right: 2rem;
-  /*margin-left: 0.7rem;*/
-
 }
 
 .title-playlist {
   font-weight: bold;
   padding-top: 0.5rem;
-  /*font-size: ;*/
   margin-bottom: 0px;
   margin-top: 0px;
 }
@@ -320,10 +244,6 @@
   color: grey;
   margin-bottom: 0;
   font-size: 1rem;
-  /*white-space: nowrap;*/
-  /*text-overflow: ellipsis;*/
-  /*overflow: hidden;*/
-
 }
 
 .img-playlist ~ * {
@@ -368,9 +288,7 @@
 }
 
 .content-little{
-  /*margin-top: 0px;*/
   color: grey;
-  /*margin-bottom: 0;*/
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
