--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,9 +27,9 @@
 
 <app-film [filmResult]="movie" type="medium" ></app-film>
 
-<!--<app-film [filmResult]="movie" type="big" ></app-film>-->
+<app-film [filmResult]="movie" type="big" ></app-film>
 
-<!--<app-film [filmResult]="movie" type="playlist" ></app-film>-->
+<app-film [filmResult]="movie" type="playlist" ></app-film>
 
 
 <!--<app-film id="11" type="medium"></app-film>-->
