recherche moyen film OK

--- a/src/app/handle-movies/handle-movies.component.html
+++ b/src/app/handle-movies/handle-movies.component.html
@@ -1,4 +1,7 @@
 <!--
 <app-leo-card class="carte" [movie]="movie" *ngFor="let movie of movies"></app-leo-card>
 -->
-<app-film class="carte" [filmResult]="movie" type="medium" *ngFor="let movie of movies"></app-film>
+<div class="conteneur">
+  <h1 *ngIf="movies.length > 0">Résultat de la recherche</h1>
+  <app-film class="carte" [filmResult]="movie" type="medium" *ngFor="let movie of movies"></app-film>
+</div>
