--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,14 +22,7 @@
 <!--<section *ngIf="!movie">-->
   <!--Pas encore de films à afficher...-->
 <!--</section>-->
-
-<app-film [filmResult]="movie" type="petit" ></app-film>
-
-<app-film [filmResult]="movie" type="medium" ></app-film>
-
-<app-film [filmResult]="movie" type="big" ></app-film>
-
-<app-film [filmResult]="movie" type="playlist" ></app-film>
+<app-bandeau-playlist-film [playlist]="playlist"></app-bandeau-playlist-film>
 
 
 <!--<app-film id="11" type="medium"></app-film>-->
