--- a/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
+++ b/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
@@ -7,7 +7,7 @@
       {{titlePlaylist}} ({{numberMovie}} films)
     </div>
 
-    <div [ngClass]="{'firstMovieLeft':firstMovie}">
+    <div class="affiche-playlist">
       <app-film [filmResult]="firstMovie" type="playlist"></app-film>
     </div>
 
