ajout du symbole interdit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,8 @@
 
 <app-film [filmResult]="movie" type="petit" ></app-film>
 
+<app-film [filmResult]="movie" type="petit" [playList]=true></app-film>
+
 <app-film [filmResult]="movie" type="medium" ></app-film>
 
 <app-film [filmResult]="movie" type="big" ></app-film>
