--- a/src/app/handle-movies/handle-movies.component.css
+++ b/src/app/handle-movies/handle-movies.component.css
@@ -3,6 +3,9 @@
   margin-left: 30px;
 }
 h1 {
-  margin-left: 8px;
   font-size: x-large;
+}
+.carte {
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
 }
