--- a/src/app/handle-movies/handle-movies.component.css
+++ b/src/app/handle-movies/handle-movies.component.css
@@ -4,8 +4,10 @@
 }
 h1 {
   font-size: x-large;
+  margin-bottom: 10px;
 }
 .carte {
   margin-top: 10px !important;
   margin-bottom: 10px !important;
+  border: 1px solid transparent;
 }
