--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
   <!--Pas encore de films à afficher...-->
 <!--</section>-->
 <app-bandeau-playlist-film [playlist]="playlist"></app-bandeau-playlist-film>
-
+<br clear="both"/>
 <app-film [filmResult]="movie" type="petit" ></app-film>
 
 <app-film [filmResult]="movie" type="petit" [playList]=true></app-film>
