--- a/src/app/film/film.component.html
+++ b/src/app/film/film.component.html
@@ -16,10 +16,10 @@
     </div>
   </section>
 
-    <img *ngIf="!isPlayList" [src]="buttonThreeVertical" ngClass="img-three-points" ng-click="displayModalClick()"/>
+    <a (click)="displayModalClick()"><img *ngIf="!isPlayList" [src]="buttonThreeVertical" ngClass="img-three-points" ng-click="displayModalClick()"/></a>
 
 
-    <img *ngIf="isPlayList" src='/assets/no-entry.svg' ngClass="img-forbidden"/>
+  <img *ngIf="isPlayList" src='/assets/no-entry.svg' ngClass="img-forbidden"/>
 
 
 </section>
