--- a/src/app/film/film.component.css
+++ b/src/app/film/film.component.css
@@ -29,9 +29,10 @@
 
 .img-forbidden{
   position: absolute;
-  width: 2em;
+  width: 3em;
   padding-right: 1em;
-  right: -3.7em;
+  right: -11.2em;
+  top: -1em;
 }
 
 .petit-playList{
