--- a/src/app/film/film.component.css
+++ b/src/app/film/film.component.css
@@ -182,7 +182,21 @@
   padding-top: 0.5rem;
   margin-bottom: 0px;
   margin-top: 0px;
+  display: -webkit-inline-box;
+
 }
+
+.star-film {
+  padding-left: 0.5em;
+}
+
+.star-film  > *{
+  width: 1em;
+  padding-top: 0.3em;
+  margin-left: 0.2em;
+}
+
+
 
 .text-big {
   margin-top: 0px;
