--- a/src/app/film/film.component.html
+++ b/src/app/film/film.component.html
@@ -108,8 +108,7 @@
 
 </section>
 
-
-<!--<app-handle-film *ngIf="displayModalR" movie="movie"></app-handle-film>-->
+<app-handle-film *ngIf="displayModalR" movie="movie"></app-handle-film>
 
 
 
