placement du modal

--- a/src/app/film/film.component.html
+++ b/src/app/film/film.component.html
@@ -21,6 +21,8 @@
 
   <img *ngIf="isPlayList" src='/assets/no-entry.svg' ngClass="img-forbidden"/>
 
+  <app-handle-film *ngIf="displayModalR" movie="movie" style="display: inline-block"></app-handle-film>
+
 
 </section>
 
@@ -123,7 +125,6 @@
 </section>
 
 
-<app-handle-film *ngIf="displayModalR" movie="movie"></app-handle-film>
 
 <!--<pre>{{movie | json}}</pre>-->
 
