--- a/src/app/film/film.component.html
+++ b/src/app/film/film.component.html
@@ -21,7 +21,7 @@
 
   <img *ngIf="isPlayList" src='/assets/no-entry.svg' ngClass="img-forbidden"/>
 
-  <app-handle-film *ngIf="displayModalR" movie="movie" style="display: inline-block"></app-handle-film>
+  <app-handle-film *ngIf="displayModalR" [movie]="movie" style="display: inline-block"></app-handle-film>
 
 
 </section>
