--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
 <app-playslist-menu (playlistStatut)="mouseOut($event)" *ngIf="playlistMenu"></app-playslist-menu>
 <!--<app-handle-movies></app-handle-movies>-->
 <router-outlet></router-outlet>
-<app-handle-movies></app-handle-movies>
-<!-- <app-bandeau nomBandeau="populaires"></app-bandeau>
+<!-- <app-handle-movies></app-handle-movies>
+<app-bandeau nomBandeau="populaires"></app-bandeau>
 <app-bandeau nomBandeau="prochainement en salles"></app-bandeau>
 -->
 
