maj pour modal au dessus

--- a/src/app/film/film.component.html
+++ b/src/app/film/film.component.html
@@ -22,7 +22,7 @@
   <img *ngIf="isPlayList" src='/assets/no-entry.svg' ngClass="img-forbidden"/>
 
   <!--<mat-menu #menu="matmodal">-->
-      <app-handle-film *ngIf="displayModalR" [movie]="movie" ngClass="modal-three-point" style="display: inline-block" ></app-handle-film>
+      <app-handle-film *ngIf="displayModalR" [movie]="movie" ngClass="modal-three-point"  ></app-handle-film>
   <!--</mat-menu>-->
 
 </section>
