--- a/src/app/playslist-menu/playslist-menu.component.html
+++ b/src/app/playslist-menu/playslist-menu.component.html
@@ -11,8 +11,8 @@
         <button class="icon cyven"><i class="fa fa-align-justify logo"></i><h1>Cyven</h1></button>
       </div>
 
-      <div class="row">
-        <button class="icon"><i class="fa fa-home"></i><h1>Accueil</h1></button>
+      <div class="row" (click)="handleClickAccueil()">
+        <button class="icon"><i class="fa fa-home" ></i><h1>Accueil</h1></button>
       </div>
 
       <div class="row">
