--- a/src/app/playslist-menu/playslist-menu.component.html
+++ b/src/app/playslist-menu/playslist-menu.component.html
@@ -8,11 +8,11 @@
     <div class="colonne">
 
       <div class="row">
-        <button class="icon cyven"><i class="fa fa-align-justify logo"></i><h1>Cyven</h1></button>
+        <button class="icon cyven" (click)="mouseOut()"><i class="fa fa-align-justify logo"></i><h1>Cyven</h1></button>
       </div>
 
-      <div class="row" (click)="handleClickAccueil()">
-        <button class="icon"><i class="fa fa-home" ></i><h1>Accueil</h1></button>
+      <div class="row">
+        <button class="icon" (click)="handleClickAccueil()"><i class="fa fa-home" ></i><h1>Accueil</h1></button>
       </div>
 
       <div class="row">
