--- a/src/app/film/film.component.html
+++ b/src/app/film/film.component.html
@@ -2,7 +2,7 @@
 
   <!--partie pour les film petit et les moyen-->
   <!--ne pas oublier de rajouter le bouton voir plus-->
-  <section *ngIf="petit || medium" [ngClass]="{'petit': petit,'medium': medium}">
+  <section (click)="handleClickMovie(idMovie)" *ngIf="petit || medium" [ngClass]="{'petit': petit,'medium': medium}">
     <img [ngClass]="{'img-petit':petit,'img-medium': medium}" [src]="getPath(movie.poster_path)" />
     <div [ngClass]="{'body-petit': petit, 'body-medium': medium}">
       <h1 [ngClass]="{'title-petit': petit, 'title-medium': medium}">{{getTitle()}}</h1>
