--- a/src/app/handle-bandeau/handle-bandeau.component.html
+++ b/src/app/handle-bandeau/handle-bandeau.component.html
@@ -1,2 +1,4 @@
-<app-bandeau nomBandeau="populaires"></app-bandeau>
-<app-bandeau nomBandeau="prochainement en salles"></app-bandeau>
+<div class="conteneur">
+  <app-bandeau nomBandeau="populaires"></app-bandeau>
+  <app-bandeau nomBandeau="prochainement en salles"></app-bandeau>
+</div>
