--- a/src/app/header-menu/header-menu.component.html
+++ b/src/app/header-menu/header-menu.component.html
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-2 drop-container">
-      <button class="drop"><i class="fa fa-align-justify"></i><h1>Cyven</h1></button>
+      <button class="drop" (click)="mouseEnter()"><i class="fa fa-align-justify"></i><h1>Cyven</h1></button>
     </div>
 
     <div class="col-6 offset-1 form-group search">
