--- a/src/app/header-menu/header-menu.component.html
+++ b/src/app/header-menu/header-menu.component.html
@@ -10,7 +10,7 @@
           <input type="text" class="form-control search-input" placeholder="Rechercher un film, une serie..." name="searchReq" ngModel>
           <button class="search-button" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
           <div class="lien">
-          <a href="#">Recherche avancée</a>
+          <a >Recherche avancée</a>
           </div>
         </form>
     </div>
