--- a/src/app/film/film.component.html
+++ b/src/app/film/film.component.html
@@ -16,14 +16,12 @@
     </div>
   </section>
 
-    <a (click)="displayModalClick()"><img *ngIf="!isPlayList" [src]="buttonThreeVertical" ngClass="img-three-points" ng-click="displayModalClick()"/></a>
-
-
+  <a (click)="displayModalClick()"><img *ngIf="!isPlayList" [src]="buttonThreeVertical" ngClass="img-three-points" ng-click="displayModalClick()"/></a>
+  
   <img *ngIf="isPlayList" src='/assets/no-entry.svg' ngClass="img-forbidden"/>
 
-  <!--<mat-menu #menu="matmodal">-->
-      <app-handle-film *ngIf="displayModalR" [movie]="movie" ngClass="modal-three-point"  ></app-handle-film>
-  <!--</mat-menu>-->
+  <app-handle-film *ngIf="displayModalR && medium" [movie]="movie" style="display: inline-block"  ></app-handle-film>
+  <app-handle-film *ngIf="displayModalR && petit" [movie]="movie" class="modal-three-point"  ></app-handle-film>
 
 </section>
 
