ajout film little

--- a/src/app/bandeau/bandeau.component.html
+++ b/src/app/bandeau/bandeau.component.html
@@ -7,13 +7,13 @@
 
 <div *ngIf="estBandeauPopulaire()" >
   <div [hidden]="!estAffichable" class="inline-block"*ngFor="let film of populaires">
-    <app-film  [filmResult]="film" type="petit" ></app-film>
+    <app-little-film  [filmResult]="film" ></app-little-film>
   </div>
 </div>
 
 <div *ngIf="estBandeauProchainement()" >
   <div [hidden]="!estAffichable" class="inline-block" *ngFor="let film of prochainement">
-    <app-film  [filmResult]="film" type="petit" ></app-film>
+    <app-little-film  [filmResult]="film" ></app-little-film>
   </div>
 </div>
 <br>
