--- a/src/app/bandeau-playlist-film/bandeau-playlist-film.component.css
+++ b/src/app/bandeau-playlist-film/bandeau-playlist-film.component.css
@@ -1,36 +1,49 @@
-.titlePlaylist{
+.titlePlaylist {
+  text-transform: capitalize;
+  font-size: xx-large;
+  color: #757070;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+}
+
+.numberMovie {
   text-transform: capitalize;
   font-size: xx-large;
   color: #757070;
   font-family: 'Roboto', sans-serif;
 }
 
-.playlistFilm {
+.playlistFilmTemp {
   display: flex;
   flex-flow: row wrap; /* Align on the same line */
   justify-content: space-between; /* Equal margin between the child elements */
 }
 
-.left {
+.playlistFilm {
+  color: #757070;
+  margin: 2em 2em 2em 2em;
+}
+
+.leftTemp {
   background: #f2f2f2;
   padding: 20px 20px 20px 20px ;
   flex-grow: 0;
 }
 
-.affiche-playlist {
+.affiche-playlistTemp {
   width: 30rem;
 }
 
-.right {
+.rightTemp {
   flex-grow: 1;
 }
 
-.bandeau {
+.bandeauTemp {
   display: flex;
   flex-flow: row wrap; /* Align on the same line */
   justify-content: space-evenly; /* Equal margin between the child elements */
 }
 
-.movie {
+.movieTemp {
   margin: 100px 50px 0px 50px;
 }
