ajout film medium mais 3 point marche pas

--- a/src/app/bandeau-result-search/bandeau-result-search.component.html
+++ b/src/app/bandeau-result-search/bandeau-result-search.component.html
@@ -2,6 +2,6 @@
 <h1 ngClass="result-search">Resultat Recherche</h1>
 
   <div *ngFor="let film of getResult()">
-    <app-film type="medium"  id="{{film}}"></app-film>
+    <app-medium-flim   id="{{film}}"></app-medium-flim>
   </div>
 
