--- a/src/app/little-film/little-film.component.css
+++ b/src/app/little-film/little-film.component.css
@@ -16,6 +16,7 @@
 .img-forbidden{
   position: absolute;
   width: 3em;
+  height: 3em;
   padding-right: 1em;
   right: -11.2em;
   top: -1em;
@@ -44,23 +45,23 @@
 
 .name {
   font-weight: bold;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
   display: inline-block;
 }
 
 .var {
   color: grey;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
   margin-left: 0.2em;
   display: inline-block;
 }
 .petit {
   width: 10em;
-  -webkit-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
-  box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
+  box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
   border-radius: 0 0 0 0;
   border: none;
 }
@@ -76,11 +77,11 @@
 .title-petit {
   font-weight: bold;
   font-size: 1.5em;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 .text-petit {
-  margin-top: 0px;
+  margin-top: 0;
   color: grey;
   margin-bottom: 0;
   white-space: nowrap;
@@ -104,8 +105,8 @@
 .title-little {
   font-weight: bold;
   font-size: 120%;
-  margin-bottom: 0px;
-  padding-top: 0px;
+  margin-bottom: 0;
+  padding-top: 0;
 }
 
 .content-little{
