--- a/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
+++ b/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
@@ -1,43 +1,25 @@
 <div class='playlistFilm'>
 
-  <div class="left">
 
     <div class="titlePlaylist">
       {{titlePlaylist}}
     </div>
 
     <div *ngIf="oneMovie" class="numberMovie">
-      Film à voir, {{numberMovie}}
+      {{numberMovie}} Film
     </div>
 
     <div *ngIf="multiMovie" class="numberMovie">
-      Films à voir, {{numberMovie}}
+      {{numberMovie}} Films
     </div>
 
-    <div class="affiche-playlist">
-      <app-film [filmResult]="firstMovie" type="playlist"></app-film>
-    </div>
+  <div class="bandeau">
 
-  </div>
-
-
-  <div class="right">
-
-    <div class="bandeau">
-      <div *ngFor="let movie of moviesUp">
+      <div *ngFor="let movie of movies">
         <div class="movie">
-          <app-film [filmResult]="movie" type="petit" [playList]="true"></app-film>
+          <app-little-film [filmResult]="movie" [playList]="true"></app-little-film>
         </div>
       </div>
-    </div>
-
-    <div class="bandeau">
-      <div *ngFor="let movie of moviesBottom">
-        <div class="movie">
-          <app-film [filmResult]="movie" type="petit" [playList]="true"></app-film>
-        </div>
-      </div>
-    </div>
 
   </div>
 
