--- a/src/app/little-film/little-film.component.css
+++ b/src/app/little-film/little-film.component.css
@@ -14,7 +14,8 @@
 }
 
 .img-forbidden{
-  position: absolute;
+  height: 3em;
+  /*position: absolute;*/
   width: 3em;
   padding-right: 1em;
   right: -11.2em;
