modif film bandeau

--- a/src/app/bandeau/bandeau.component.html
+++ b/src/app/bandeau/bandeau.component.html
@@ -7,7 +7,7 @@
 
 <div *ngIf="estBandeauPopulaire()" >
   <div [hidden]="!estAffichable" class="inline-block" *ngFor="let film of populaires">
-    <app-little-film  [filmResult]="film" [playList]="true"></app-little-film>
+    <app-little-film  [filmResult]="film" ></app-little-film>
   </div>
 </div>
 
