--- a/src/app/handle-movies/handle-movies.component.html
+++ b/src/app/handle-movies/handle-movies.component.html
@@ -4,5 +4,5 @@
 <div class="conteneur">
   <h1 *ngIf="movies.length > 0">Résultat de la recherche</h1>
   <div class="espace"></div>
-  <app-film class="carte" [filmResult]="movie" type="medium" *ngFor="let movie of movies"></app-film>
+  <app-medium-flim [filmResult]="movie" *ngFor="let movie of movies"></app-medium-flim>
 </div>
