--- a/src/app/playslist-menu/playslist-menu.component.html
+++ b/src/app/playslist-menu/playslist-menu.component.html
@@ -29,12 +29,12 @@
         <button class="icon" (click)="handleAdd()"><i class="fa fa-plus-circle"></i><h1>Créer une playlist</h1></button>
       </div>
 
-      <div class="row">
-        <button class="icon" (click)="handleDel()"><i class="fa fa-minus-circle"></i><h1>Supprimer une playlist</h1></button>
-      </div>
+      <!--<div class="row">-->
+        <!--<button class="icon" (click)="handleDel()"><i class="fa fa-minus-circle"></i><h1>Supprimer une playlist</h1></button>-->
+      <!--</div>-->
 
       <app-add-playlist (addStatut)="addClose($event)" class="addPopUp" *ngIf="add"></app-add-playlist>
-      <app-remove-playlist (delStatut)="delClose($event)" class="removePopUp" *ngIf="remove"></app-remove-playlist>
+      <!--<app-remove-playlist (delStatut)="delClose($event)" class="removePopUp" *ngIf="remove"></app-remove-playlist>-->
 
     </div>
 
