--- a/src/app/playslist-menu/playslist-menu.component.html
+++ b/src/app/playslist-menu/playslist-menu.component.html
@@ -12,7 +12,7 @@
       </div>
 
       <div class="row">
-        <h1>MES PLAYLIST</h1>
+        <h1>MES PLAYLISTS</h1>
       </div>
 
       <app-playlist *ngFor="let playlist of playlists; let i = index"
