supprimer film d'une playlist

--- a/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
+++ b/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
@@ -17,7 +17,7 @@
 
       <div *ngFor="let movie of movies">
         <div class="movie">
-          <app-little-film [filmResult]="movie" [playList]="true"></app-little-film>
+          <app-little-film [filmResult]="movie" [playList]="true" (movieDel)="delMovie($event)"></app-little-film>
         </div>
       </div>
 
