--- a/src/app/little-film/little-film.component.html
+++ b/src/app/little-film/little-film.component.html
@@ -11,6 +11,6 @@
   <a (click)="displayModalClick()">
     <img *ngIf="!isPlayList" [src]="buttonThreeVertical" ngClass="img-three-points" ng-click="displayModalClick()"/>
   </a>
-  <img *ngIf="isPlayList" src='/assets/no-entry.svg' ngClass="img-forbidden"/>
+  <img *ngIf="isPlayList" src='/assets/no-entry.svg' ngClass="img-forbidden" (click)="delMovie()"/>
   <app-handle-film *ngIf="displayModalR " [movie]="movie" class="modal-three-point"  ></app-handle-film>
 </section>
