--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -1,3 +1,4 @@
 <div class="row">
   <button class="icon"><i class="fa fa-play-circle"></i><h1>{{playlistName}}</h1></button>
+  <!--<button><i class="fa fa-minus-circle"></i></button>-->
 </div>
