--- a/src/app/little-film/little-film.component.css
+++ b/src/app/little-film/little-film.component.css
@@ -1,5 +1,5 @@
 .petit-general {
-  width: 12em;
+  width: 15em;
   display: -webkit-inline-box;
 }
 
@@ -14,13 +14,15 @@
 }
 
 .img-forbidden{
-  height: 3em;
-  /*position: absolute;*/
-  width: 3em;
-  height: 3em;
-  padding-right: 1em;
-  right: -11.2em;
-  top: -1em;
+  position: relative;
+  /* float: right; */
+  width: 2.5em;
+  height: 2.5em;
+  /* padding-right: 1em; */
+  right: 1.6em;
+  top: -0.8em;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 .petit-playList{
@@ -51,15 +53,8 @@
   display: inline-block;
 }
 
-.var {
-  color: grey;
-  margin-bottom: 0;
-  margin-top: 0;
-  margin-left: 0.2em;
-  display: inline-block;
-}
 .petit {
-  width: 10em;
+  width: 13em;
   -webkit-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
   -moz-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
   box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
@@ -68,16 +63,18 @@
 }
 
 .img-petit{
-  width : 10em;
+  width : 13em;
 }
 .body-petit {
   padding: 2px;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .title-petit {
   font-weight: bold;
   font-size: 1.5em;
+  text-align: center ;
+  position: center;
   margin-bottom: 0;
   margin-top: 0;
 }
@@ -89,32 +86,6 @@
   text-overflow: ellipsis;
   overflow: hidden;
 
-}
-
-.img-little{
-  width: 126%;
-  margin-bottom: 0.5rem;
-}
-
-.little {
-  width : 10%;
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
-
-}
-
-.title-little {
-  font-weight: bold;
-  font-size: 120%;
-  margin-bottom: 0;
-  padding-top: 0;
-}
-
-.content-little{
-  color: grey;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
 }
 
 
