--- a/src/app/film/medium-flim/medium-flim.component.css
+++ b/src/app/film/medium-flim/medium-flim.component.css
@@ -7,6 +7,7 @@
 .medium-general {
   width: 42em;
   display: flex;
+
 }
 
 .medium-general:hover .img-three-points {
@@ -15,13 +16,6 @@
 }
 
 .modal-three-point {
-  /*background-attachment: initial;*/
-  /*background-clip: initial;*/
-  /*background-color: transparent;*/
-  /*!*background-image: url("/tests/images/DSCF4874_SURVOL.JPG");*!*/
-  /*background-origin: initial;*/
-  /*background-position: 0 0;*/
-  /*background-repeat: no-repeat no-repeat;*/
   position: absolute;
   display: inline-block;
 }
@@ -30,19 +24,19 @@
 /*!*part medium definition*!*/
 
 .time-medium {
-  /*font-size: 1.5em;*/
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .medium {
   width: 40rem;
-  -webkit-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
-  box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
+  box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
   border-radius: 0 0 0 0;
   border: none;
   display: -webkit-inline-box;
+  margin-top: 1em;
 }
 
 .img-medium{
@@ -58,11 +52,11 @@
 
 .title-medium {
   font-weight: bold;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 .text-medium {
-  margin-top: 0px;
+  margin-top: 0;
   color: grey;
   margin-bottom: 0;
 }
@@ -79,15 +73,15 @@
 /*!*part general*!*/
 .name {
   font-weight: bold;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
   display: inline-block;
 }
 
 .var {
   color: grey;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
   margin-left: 0.2em;
   display: inline-block;
 }
@@ -102,15 +96,15 @@
 
 .card-img-medium{
   width: 30%;
-  margin-right: 0px;
-  padding-left: 0px;
+  margin-right: 0;
+  padding-left: 0;
 
 }
 
 .card-body-medium {
-  padding-right: 0px;
-  padding-left: 0px;
-  margin-right: 0px;
-  margin-left: 0px;
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: 0;
+  margin-left: 0;
 }
 
