--- a/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
+++ b/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div *ngIf="multiMovie" class="numberMovie">
-      {{numberMovie}} Filmsgg
+      {{numberMovie}} Films
     </div>
 
   <div class="bandeau">
