--- a/src/app/bandeau-gauche/playlist/playlist.component.html
+++ b/src/app/bandeau-gauche/playlist/playlist.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-  <button class="icon"><i class="fa fa-play-circle"></i><h1>{{playlistName}}</h1>
+  <button class="icon">
+    <i class="fa fa-play-circle"></i>
+    <h1>{{playlistName}}</h1>
     <img src='/assets/no-entry.svg' ngClass="img-forbidden" (click)="handleClickRemove()"/>
   </button>
 </div>
