--- a/src/app/bandeau-gauche/playslist-menu/playslist-menu.component.html
+++ b/src/app/bandeau-gauche/playslist-menu/playslist-menu.component.html
@@ -4,11 +4,17 @@
     <div class="colonne">
 
       <div class="row">
-        <button class="icon cyven" (click)="mouseOut()"><i class="fa fa-align-justify logo"></i><h1>Cyven</h1></button>
+        <button class="icon cyven" (click)="mouseOut()">
+          <i class="fa fa-align-justify logo"></i>
+          <h1>Cyven</h1>
+        </button>
       </div>
 
       <div class="row">
-        <button class="icon" (click)="handleClickAccueil()"><i class="fa fa-home" ></i><h1>Accueil</h1></button>
+        <button class="icon" (click)="handleClickAccueil()">
+          <i class="fa fa-home" ></i>
+          <h1>Accueil</h1>
+        </button>
       </div>
 
       <div class="row">
@@ -26,7 +32,10 @@
       </div>
 
       <div class="row">
-        <button class="icon" (click)="handleAdd()"><i class="fa fa-plus-circle"></i><h1>Créer une playlist</h1></button>
+        <button class="icon" (click)="handleAdd()">
+          <i class="fa fa-plus-circle"></i>
+          <h1>Créer une playlist</h1>
+        </button>
       </div>
 
       <!--<div class="row">-->
