--- a/src/app/bandeau-gauche/handle-playlist/handle-film.component.css
+++ b/src/app/bandeau-gauche/handle-playlist/handle-film.component.css
@@ -1,8 +1,8 @@
 .colonne {
   width: 212px;
-  -webkit-box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 3px 20px 0 rgba(0,0,0,0.75);
+  -moz-box-shadow: 0 3px 20px 0 rgba(0,0,0,0.75);
+  box-shadow: 0 3px 20px 0 rgba(0,0,0,0.75);
   background-color: white;
 }
 button {
