--- a/src/app/modal/remove-playlist/remove-playlist.component.css
+++ b/src/app/modal/remove-playlist/remove-playlist.component.css
@@ -1,7 +1,7 @@
 .container-fluid {
-  -webkit-box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 3px 20px 0 rgba(0,0,0,0.75);
+  -moz-box-shadow: 0 3px 20px 0 rgba(0,0,0,0.75);
+  box-shadow: 0 3px 20px 0 rgba(0,0,0,0.75);
   margin: 10px 0 0 10px;
   background-color: white;
 }
