--- a/src/app/film/big-film/big-film.component.html
+++ b/src/app/film/big-film/big-film.component.html
@@ -37,12 +37,12 @@
       <div class="name">Synopsis</div>
       <p ngClass='text-playlist'>{{getSummary()}}</p>
       <img src='/assets/facebook.svg' style="width: 1em"/>
-      <img src='/assets/twitter.svg'style="width: 1em"/>
-      <img src='/assets/instagram.svg'style="width: 1.2em"/>
+      <img src='/assets/twitter.svg' style="width: 1em"/>
+      <img src='/assets/instagram.svg' style="width: 1.2em"/>
       <div ngClass="btn-modal">
         <input type="button" class="btn-big" value="Ajouter à une playlist" (click)="displaymodalAjout()">
         <!--<app-add-playlist ngClass="modal-ajout" *ngIf="modalAjout"></app-add-playlist>-->
-        <app-handle-film *ngIf="modalAjout" [movie]="movie" ngClass="modal-ajout"  ></app-handle-film>
+        <app-handle-playlist *ngIf="modalAjout" [movie]="movie" ngClass="modal-ajout"  ></app-handle-playlist>
 
       </div>
 
