--- a/src/app/film/little-film/little-film.component.html
+++ b/src/app/film/little-film/little-film.component.html
@@ -12,5 +12,5 @@
     <img *ngIf="!isPlayList" [src]="buttonThreeVertical" ngClass="img-three-points" ng-click="displayModalClick()"/>
   </a>
   <img *ngIf="isPlayList" src='/assets/no-entry.svg' ngClass="img-forbidden" (click)="delMovie()"/>
-  <app-handle-film *ngIf="displayModalR " [movie]="movie" class="modal-three-point"  ></app-handle-film>
+  <app-handle-playlist *ngIf="displayModalR " [movie]="movie" class="modal-three-point"  ></app-handle-playlist>
 </section>
