--- a/src/app/film/big-film/big-film.component.css
+++ b/src/app/film/big-film/big-film.component.css
@@ -1,25 +1,19 @@
-/*!*part general*!*/
 .name {
   font-weight: bold;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
   display: inline-block;
 }
 
 .var {
   color: grey;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
   margin-left: 0.2em;
   display: inline-block;
 }
 
-
-
-
-/*parti big photo*/
 .time-big {
-  /*font-size: 1.5em;*/
   margin-bottom: 0;
   margin-top: 0;
 }
@@ -30,9 +24,9 @@
 
 .img-detail-big{
   margin: 10px 10px 10px 10px;
-  -webkit-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
-  box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
+  box-shadow: 0 10px 49px -24px rgba(0,0,0,0.75);
   border-radius: 0 0 0 0;
   border: none;
 }
@@ -43,15 +37,14 @@
 .body-big {
   padding-left: 2rem;
   font-size: 3rem;
-  /*width: 80%;*/
   padding-right: 2rem;
 }
 
 .title-big {
   font-weight: bold;
   padding-top: 0.5rem;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
   display: -webkit-inline-box;
 
 }
@@ -69,7 +62,7 @@
 
 
 .text-big {
-  margin-top: 0px;
+  margin-top: 0;
   color: grey;
   margin-bottom: 0;
   font-size: 2rem;
@@ -98,7 +91,7 @@
 }
 
 .text-playlist {
-  margin-top: 0px;
+  margin-top: 0;
   color: grey;
   margin-bottom: 0;
   font-size: 1rem;
@@ -110,11 +103,6 @@
   margin-top: 0;
   padding-right: 10px;
   float: right;
-
-  /*position: absolute;*/
-  /*right: 1.8rem;*/
-  /*bottom: 23.1rem;*/
-
 }
 
 .btn-modal{
